--- a/iesk_html/index.htm
+++ b/iesk_html/index.htm
@@ -3,7 +3,7 @@
 
 <h1>Esiet sveicināti manā ieskaites mājas lapā</h1>
 <br>
-<h1>Egīls_Stirnpisis</h1>
+<h1>Maigonis_Stirnpisis</h1>
 <br>
 <img src="bildes/leopards.jpeg"width="400" height"800">
 <br>
